<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Caster</string>
    <string name="cast_button">Cast</string>
    <string name="choose_video">Choose video</string>
    <string name="default_title">Video</string>
    <string name="url_hint">Paste a video link</string>
    <string name="cast_link">Cast this link</string>
    <string name="invalid_url">Not a valid video link</string>
    <string name="status_idle">Not connected</string>
    <string name="status_pick_device">Tap the Cast button and pick a Chromecast to start playback</string>
    <string name="status_connected">Casting to %1$s</string>
    <string name="status_connect_failed">Could not connect to the Chromecast</string>
    <string name="status_load_failed">Failed to load media (error %1$d)</string>
    <string name="unsupported_uri">Unsupported link type</string>
    <string name="no_network">No Wi-Fi network — cannot serve local files to the Chromecast</string>
    <string name="casting_to">Casting to</string>
    <string name="play_pause">Play or pause</string>
    <string name="rewind">Rewind 10 seconds</string>
    <string name="forward">Forward 30 seconds</string>
    <string name="volume_down">Volume down</string>
    <string name="volume_up">Volume up</string>
    <string name="mute">Mute</string>
    <string name="disconnect">Disconnect</string>
    <string name="server_channel_name">Local streaming server</string>
    <string name="server_notification_title">Serving video to Chromecast</string>
    <string name="server_notification_text">Streaming a local file over Wi-Fi</string>
    <string name="server_notification_stop">Stop</string>
    <string name="no_browser">No app found to open the link</string>
    <string name="menu_source">Source code</string>
    <string name="menu_support">Support development</string>
    <string name="url_source">https://github.com/ethanm6/Caster</string>
    <string name="url_support">https://ko-fi.com/ethanm6</string>
</resources>
